--- a/moviesMERN-master/client/src/components/views/LandingPage/Sections/style.css
+++ b/moviesMERN-master/client/src/components/views/LandingPage/Sections/style.css
@@ -33,3 +33,36 @@
     justify-content: space-around;
 }
 
+.trailer_container{
+    width:100vw;
+    height:100vh;
+    display: flex;
+    position:fixed;
+    top:0%;
+    left:0%;
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    background-color:rgba(53, 52, 52, 0.8)
+}
+.trailer_item{
+    z-index: 10;
+
+    border-radius:1rem;
+}
+.close_btn{
+    position: relative;
+    left: 5%;
+    top: .3rem;
+    background-color:white;
+    font-size:1.5rem;
+    font-weight: 700;
+    border:none;
+    height: 2rem;
+
+}
+.header{
+    background-color: white;
+    display: flex;
+    justify-content: space-around;
+}
